<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <!-- Home -->
    <string name="app_name">DELTA</string>
    <string name="action_settings">Settings</string>
    <string name="start_app_btn">Start App</string>
    <!-- Login -->
    <string name="title_activity_login">Log In</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (6-12 characters)</string>
    <string name="teacher_login">Continue to RA Login</string>
    <string name="admin_login">Administrator Login</string>
    <string name="reg_admin">Register New Administrator</string>
    <!-- Admin/Teacher -->
    <string name="title_activity_admin">Administrator Homepage</string>
    <string name="title_activity_teacher">Teacher Homepage</string>
    <string name="manage_teachers">Manage Teachers</string>
    <string name="manage_students">Manage Students</string>
    <string name="trial_main">Trial Main</string>
    <string name="trial_forced">Trial Forced</string>
    <string name="trial_setting">Trial Setting</string>
    <string name="start_session">Start Session</string>
    <string name="upload_data">Upload Data to Box</string>
    <string name="logout">Log Out</string>
    <string name="onedrive_login">Login to Onedrive</string>
    <!-- Session Start -->
    <string name="title_activity_session_start">Session Start</string>
    <string name="free_play">Free Play</string>
    <!-- Game Selection -->
    <string name="title_activity_free_play_selection">Free Play Selection</string>
    <string name="title_activity_game_selection">Game Selection</string>
    <string name="free_play_select">Free Play!</string>
    <string name="next">Continue</string>
    <string name="select_game">Select Game!</string>
    <!-- Admin Registration -->
    <string name="title_activity_reg_admin">Register New Administrator</string>
    <string name="admin_registration">Administrator Registration</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="prompt_admin_code">Admin Secret Code Confirmation</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <!--  -->
    <string name="title_activity_trial_setting">Trial Setting</string>
    <string name="num_trial">* Total Number of Trials</string>
    <string name="init_trial_time">* Initial Trial Time \n(in seconds)</string>
    <string name="game_time_delay">* Game Time for \nDelay Choice \n(in seconds)</string>
    <string name="game_time_instant">* Game Time for \nImmediate Choice \n(in seconds)</string>
    <string name="time_inc">* Wait Time Increment (sec)\nFor Every 3 Consecutive \nDelay Choices</string>
    <string name="default_setting">Default Setting</string>
    <string name="save_change">Save Changes</string>
    <!--  -->
    <string name="title_activity_session_prep">Select Student to Start</string>
    <string name="select_student">Select Student for Session</string>
    <string name="enter_student">Enter Student ID for Session</string>
    <string name="select_schools">Select School</string>
    <string-array name="school_names">
        <item>Triumph Preschool</item>
        <item>Sacramento Country Day School</item>
        <item>Natomas Unified School District</item>
        <item>UC Davis Early Childhood Lab School</item>
        <item>Russell Park CDC</item>
        <item>Homeschool</item>
    </string-array>
    <string name="enter_RAID_here">Enter RA Username</string>
    <string name="enter_RAPassword_here">Enter RA Password</string>
    <string name="select">Select</string>
    <string name="add_new_student">Add New Student</string>
    <string name="enter_studID_here">Enter Subject ID Here</string>
    <string name="enter">Enter</string>
    <string name="get_new_stud">Enter New Student (id)</string>
    <!--  -->
    <string name="title_activity_trial_main">Begin Trial</string>
    <string name="start_trial">Start Trial</string>
    <string name="quit_trialsave">Save Data and Quit</string>
    <string name="hide_timer">Hide Timer During Wait Time</string>
    <string name="show_timer">Show Timer During Wait Time</string>
    <string name="quit_trialnosave">Quit without Saving</string>
    <string name="title_activity_trial_selection">Selection</string>
    <string name="wait">Wait</string>
    <string name="now">Now</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <!--  -->
    <string name="title_activity_manage_teacher">Manage Teacher</string>
    <string name="delete_teacher">Delete Teacher</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="enter_new_teacher">Enter New Teacher</string>
    <string name="add">Add</string>
    <string name="delete">Del</string>
    <!--  -->
    <string name="title_activity_manage_student">Manage Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="add_student">Add Student</string>
    <string name="enter_new_student">Enter New Student</string>
    <string name="title_activity_trial_wait">Waiting Period</string>
    <string name="title_activity_box">BoxActivity</string>
    <string name="upload">Upload</string>
    <string name="done">Done</string>
    <string name="accounts">Accounts</string>
    <string name="title_activity_done_session">DoneSessionActivity</string>
    <!--Done Session Activity-->
    <string name="prompt_done">Session is finished!\nEnter comments if any or click Done to finish.</string>
    <string name="enter_comments_here">Comments</string>
    <!--Done File Upload Activity-->>
    <string name="title_activity_done_file_upload">DoneFileUploadActivity</string>
    <string name="upload_done">File upload is successfully completed.</string>
    <string name="flagged">Participant is flagged.\nPlease inform participant.</string>

    <!--Fruit Ninja-->
    <string name="game2_name">Fruit Ninja</string>
    <string name="start">Start</string>
    <string name="button_home">Home</string>

    <!--Brick Breaker-->
    <string name="high_score">"High score: "</string>
    <string name="new_game">New game</string>
    <string name="reset_high_score">Reset high score</string>
    <string name="score">"Score: "</string>
    <string name="multiplier">"Multiplier: "</string>
    <string name="lives">"Lives: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game Over</string>
    <string name="new_high_score">"New high score: "</string>
    <string name="do_you_want_to_restart_the_game">Do you want to restart the game?</string>
    <string name="final_score">"Final score: "</string>
    <string name="difficult">"Difficulty:"</string>
    <string name="explosive_brick_explanation">Explosive brick (breaks all bricks around it)</string>
    <string name="moveable_brick_explanation">Moveable brick (keeps moving from one side to another)</string>
    <string name="hard_brick_explanation">Hard brick (need 2 hits to break it)</string>
    <string name="special_bricks">Special bricks:</string>
    <string name="ready">Ready?</string>
    <string name="psss_just_between_you_and_me">Psss&#8230; Just between you and me</string>
    <string name="do_you_want_to_get_the_maximum_score_for_free">Do you want to get the maximum score for free?</string>
    <string name="enable_sound_effects">Enable sound effects</string>


    <string name="moe_app_name">MysteryOfOrientExpress</string>
    <string name="title_rb_main">Retro Breaker</string>
</resources>
