<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="phoenix.delta.RegAdminActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/admin_registration"
        android:id="@+id/textView"
        android:textSize="48dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:id="@+id/username"
        android:hint="@string/prompt_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/prompt_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/prompt_repeat_password"
        android:hint="@string/prompt_repeat_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/admin_code"
        android:hint="@string/prompt_admin_code"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regadmin_error_msg" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_btn"
        android:textSize="18dp"
        android:background="@drawable/white_button"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_btn"
        android:textSize="18dp"
        android:background="@drawable/white_button"
        android:layout_marginTop="15dp"/>

</LinearLayout>
