 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
      android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:orientation="vertical"
      android:background="@drawable/bg"
      tools:context="phoenix.delta.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/delta_logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_login"
            android:textSize="48dp"
            android:id="@+id/textView"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:id="@+id/username"
            android:hint="@string/prompt_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/prompt_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_error_msg" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_login"
            android:id="@+id/teacher_login_btn"
            android:textSize="18dp"
            android:background="@drawable/white_button"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:id="@+id/admin_login_btn"
            android:textSize="18dp"
            android:background="@drawable/white_button"
            android:layout_marginTop="15dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_admin"
            android:id="@+id/reg_admin_btn"
            android:textSize="18dp"
            android:background="@drawable/white_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"/>
 </LinearLayout>

