<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg3_run"
    tools:context="phoenix.delta.ManageTeacherActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/title_activity_manage_teacher"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_teacher"
        android:id="@+id/btn_add_teacher"
        android:textSize="24dp"
        android:background="@drawable/transparent_button" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_teacher_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:id="@+id/new_teacher"
            android:hint="@string/enter_new_teacher"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_add"
            android:layout_toStartOf="@+id/btn_add" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btn_add"
            android:background="@drawable/transparent_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_teacher"
        android:id="@+id/btn_del_teacher"
        android:textSize="24dp"
        android:background="@drawable/transparent_button" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/del_teacher_layout">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teacher_list"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/btn_del"
            android:layout_toStartOf="@+id/btn_del"
            android:layout_alignBottom="@+id/btn_del" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btn_del"
            android:background="@drawable/transparent_button"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/done_btn"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:background="@drawable/transparent_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
