<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg3_run"
    tools:context="phoenix.delta.AdminActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_teachers"
        android:id="@+id/manage_teachers"
        android:textSize="24dp"
        android:background="@drawable/transparent_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_students"
        android:id="@+id/manage_students"
        android:textSize="24dp"
        android:background="@drawable/transparent_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trial_setting"
        android:id="@+id/trial_setting"
        android:textSize="24dp"
        android:background="@drawable/transparent_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_session"
        android:id="@+id/start_session"
        android:textSize="24dp"
        android:background="@drawable/transparent_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:id="@+id/change_password"
            android:textSize="24dp"
            android:background="@drawable/transparent_button"
            android:layout_above="@+id/logout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:textSize="24dp"
            android:background="@drawable/transparent_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</LinearLayout>
