<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="phoenix.delta.DoneSessionActivity"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/upload_done"
        android:id="@+id/file_upload_done"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/flagged"
        android:id="@+id/flagged"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:background="#64ffffff"/>

    <Button
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/done_btn"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/white_button"
        android:textStyle="bold"
        android:textSize="20sp"/>
</LinearLayout>
