<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="phoenix.delta.DoneSessionActivity"
    android:background="@drawable/bg">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/prompt_done"
            android:id="@+id/prompt"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comments"
            android:hint="@string/enter_comments_here"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:ems="20"
            android:background="#64ffffff"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/done_btn"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>
